--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -354,6 +354,9 @@ template {
   width: 150px;
   margin: 10px;
   cursor: pointer;
+  background-color: #efead73f;
+  border: solid black 2px;
+  border-radius: 4px;
 }
 
 .header-container {
@@ -377,7 +380,7 @@ template {
 }
 
 .main-container {
-  background-color: #181818;
+  background-color: #0d1321;
 }
 
 .player-image {
@@ -387,4 +390,5 @@ template {
 
 .player-name {
   color: white;
+  text-align: center;
 }
